<resources>
    <string name="app_name">Hallandale Beach</string>
    <string name="back_description">Back Button</string>
    <string name="beach_image_description">Hallandale Beach Picture</string>
    <string name="public_records_icon_description">Public Records Icon</string>
    <string name="public_comments_icon_description">Public Comments Icon</string>
    <string name="visitor_tracker_icon_description">Visitor Tracker Icon</string>
    <string name="calendar_icon_description">Calendar Icon</string>
    <string name="about_us_icon_description">About Us Icon</string>

    <string name="public_records_title">Public Records</string>
    <string name="public_comments_title">Public Comments</string>
    <string name="visitor_tracker_title">Visitor Tracker</string>
    <string name="calendar_title">Calendar</string>
    <string name="about_us_title">About Us</string>

    <string name="public_records_description">Submit a Public Request (Please note this is not a requirement.)</string>
    <string name="public_comments_description">Sign up to speak at the next Commission meeting.</string>
    <string name="visitor_tracker_description">This app allows visitors to report their visits with City Officials</string>
    <string name="calendar_description">Find out what\'s happeing in Hallandale Beach</string>
    <string name="about_us_description">Learn more about Hallandale Beach</string>

</resources>
