<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hallandalebeach.hallandalebeach.MainActivity">


    <FrameLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#009BC7">
        
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="40dp"
            android:maxHeight="40dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back_description"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:src="@drawable/icon_back"
            />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/beach_image_description"
        android:src="@drawable/beach_photo"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:stretchColumns="1">
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_newspaper"
                android:contentDescription="@string/public_records_icon_description"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/public_records_title"
                    android:layout_marginTop="10dp"
                    android:textColor="#16A0CE"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/public_records_description"
                    android:textColor="#000000"
                    android:textSize="12sp"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/public_comments_icon_description"
                android:src="@drawable/icon_chatbubble"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/public_comments_title"
                    android:layout_marginTop="10dp"
                    android:textColor="#16A0CE"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/public_comments_description"
                    android:textColor="#000000"
                    android:textSize="12sp"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/visitor_tracker_icon_description"
                android:src="@drawable/icon_guestbook"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visitor_tracker_title"
                    android:layout_marginTop="10dp"
                    android:textColor="#16A0CE"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visitor_tracker_description"
                    android:textColor="#000000"
                    android:textSize="12sp"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_calendar"
                android:contentDescription="@string/calendar_icon_description"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar_title"
                    android:layout_marginTop="10dp"
                    android:textColor="#16A0CE"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/calendar_description"
                    android:textSize="12sp"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/about_us_icon_description"
                android:src="@drawable/icon_info"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_title"
                    android:layout_marginTop="10dp"
                    android:textColor="#16A0CE"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/about_us_description"
                    android:textSize="12sp"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
